working on stop-server addition